force-app/main/default/objects/D2C_VTO_POS_Session_Activity__c/D2C_VTO_POS_Session_Activity__c.object-meta.xml
<CustomObject>
    <label>POS Session Activity</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Session Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>