force-app/main/default/objects/D2C_VTO_POS_Session_Activity__c/fields/D2C_VTO_Command__c.field-meta.xml
<CustomField>
    <fullName>D2C_VTO_Command__c</fullName>
    <description
    >This field holds the rules/commands to identify the remote actions done so that appropriate action can be taken up at the POS screen.</description>
    <label>Command</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QR Code scanned</fullName>
            </value>
            <value>
                <fullName>Open VTO session</fullName>
            </value>
            <value>
                <fullName>Close VTO session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>