force-app/main/default/objects/D2C_VTO_POS_Session_Activity__c/fields/D2C_VTO_POS_Session__c.field-meta.xml
<CustomField>
    <fullName>D2C_VTO_POS_Session__c</fullName>
    <description>This lookup field is linkage between POS Session and POS Session Activity record</description>
    <label>POS Session</label>
    <referenceTo>D2C_VTO_POS_Session__c</referenceTo>
    <relationshipLabel>POS Session Activities</relationshipLabel>
    <relationshipName>D2C_VTO_POS_Session_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>