force-app/main/default/objects/D2C_VTO_POS_Session_Activity__c/fields/D2C_VTO_Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>D2C_VTO_Product_SKU__c</fullName>
    <description>This field contains the product SKU of the product against which the VTO needs to be opened</description>
    <label>Product SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>